Renaming files and changed file structure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,21 @@
 # Set cmake mimimun version
 cmake_minimum_required(VERSION 3.1)
 
+# ouptut paths
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")
+
+# Build shared libs
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+
+if(MSVC)
+    set(CMAKE_DEBUG_POSTFIX "d")
+endif()
+
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
+option(BUILD_SHARED_LIBS "Build libraries as shared as opposed to static" ON)
 
 # Enable C++14
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -31,6 +45,14 @@ add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BIND
   DEPENDS ENABLE_RPATH
   USE_LINK_PATH)
 
+# Encourage user to specify a build type (e.g. Release, Debug, etc.), otherwise set it to Release.
+if(NOT CMAKE_CONFIGURATION_TYPES)
+  if(NOT CMAKE_BUILD_TYPE)
+      message(STATUS "Setting build type to 'Release' as none was specified.")
+      set_property(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "Release")
+  endif()
+endif()
+
 # find Eigen
 find_package(Eigen3 REQUIRED)
 include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR})
@@ -42,23 +64,24 @@ set(LIBRARY_TARGET_NAME OsqpEigen)
 
 # List of CPP (source) library files.
 set(${LIBRARY_TARGET_NAME}_SRC
-  src/OptimizerData.cpp
-  src/OptimizerSettings.cpp
-  src/OptimizerSolver.cpp)
+  src/Data.cpp
+  src/Settings.cpp
+  src/Solver.cpp)
 
 set(${LIBRARY_TARGET_NAME}_HDR
-  include/OptimizerConstants.hpp
-  include/SparseMatrixHelper.hpp
-  include/SparseMatrixHelper.tpp
-  include/OptimizerData.hpp
-  include/OptimizerData.tpp
-  include/OptimizerSettings.hpp
-  include/OptimizerSolver.hpp
-  include/OptimizerSolver.tpp)
+  include/OsqpEigen.h
+  include/OsqpEigen/Constants.hpp
+  include/OsqpEigen/SparseMatrixHelper.hpp
+  include/OsqpEigen/SparseMatrixHelper.tpp
+  include/OsqpEigen/Data.hpp
+  include/OsqpEigen/Data.tpp
+  include/OsqpEigen/Settings.hpp
+  include/OsqpEigen/Solver.hpp
+  include/OsqpEigen/Solver.tpp)
 
-add_library(${LIBRARY_TARGET_NAME} SHARED ${${LIBRARY_TARGET_NAME}_SRC} ${${LIBRARY_TARGET_NAME}_HDR})
+add_library(${LIBRARY_TARGET_NAME} ${${LIBRARY_TARGET_NAME}_SRC} ${${LIBRARY_TARGET_NAME}_HDR})
 target_include_directories(${LIBRARY_TARGET_NAME} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/OsqpEigen>")
+  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
 target_link_libraries(${LIBRARY_TARGET_NAME} PRIVATE osqp::osqp)
 
