--- a/.travis.yml
+++ b/.travis.yml
@@ -118,7 +118,7 @@ script:
   - cd $TRAVIS_BUILD_DIR
   - mkdir build
   - cd build
-  - cmake -DCMAKE_BUILD_TYPE=${BUILD_TYPE} ../
+  - cmake -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DBUILD_TESTING=ON ../
   - make
   - make test
 
