- update travis script (now is compatible with ubuntu xenial and bionic) - fix MPCExample.cpp

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,12 +5,12 @@ cmake_minimum_required(VERSION 3.1)
 
 set (CMAKE_CXX_STANDARD 11)
 
-project(OSQPWrapper-Example)
+project(OsqpEigen-Example)
 
-find_package(OSQPWrapper)
+find_package(OsqpEigen)
 
 include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR})
 
 #MPCExample
 add_executable(MPCExample src/MPCExample.cpp)
-target_link_libraries(MPCExample OSQPWrapper::OSQPWrapper osqp::osqp)
+target_link_libraries(MPCExample OsqpEigen::OsqpEigen osqp::osqp)
